--- a/styles/main.css
+++ b/styles/main.css
@@ -3,21 +3,59 @@
 }
 
 body {
-  background-color: white;
-  height: 100vh;
-  margin: 0
+  max-height: 100vh;
+  margin: 0;
+  background-image: url('../assets/underwater.jpeg');
+  background-position: center;
+  background-size: cover;
+  text-align: center;
 } 
+
+h1 { 
+  color: white;
+  font-size: 60px;
+}
+
+.main-wrapper {
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+  display: flex;
+}
+
+.left-side {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  padding: 10px;
+  margin: 10px;
+}
+
+.right-side {
+  display: flex;
+  flex: 3;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .grid-wrapper {
   display: flex;
   height: 100vh;
   justify-content: center;
   align-items: center; 
-  background-image: url('../assets/underwater.jpeg');
-  background-position: center;
-  background-size: cover;
-
 }
+
 
 
 .grid {
