--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,9 @@
 
 body {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   background-image: url('../assets/underwater.jpeg');
   background-position: center;
@@ -20,8 +23,8 @@ h1 {
 
 .main-wrapper {
   display: flex;
-  /* justify-content: center;
-  align-items: center; */
+  /* justify-content: center; */
+  align-items: center;
   flex-direction: column;
 }
 
@@ -33,16 +36,26 @@ main {
 
 .left-side {
   display: flex;
-  flex: 1;
-  flex-direction: column;
+  flex: 2;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   background-image: url('../assets/scroll.png');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
-  margin: 0 40px 0 40px;
+  background-size: 500px;
   background-color: none;
+}
+
+.water-portal, .starfish-image, .shell-image {
+  height: 20px;
+}
+
+
+
+.scroll {
+  padding: 120px;
+  
 }
 
 button {
@@ -54,9 +67,29 @@ button {
   display: flex;
   flex: 3;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
+  flex-direction: column;
 }
 
+.wood-plank {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 500px;
+  height: 200px;
+  position: absolute;
+  background-image: url('../assets/wood-plank.png');
+  background-size: 500px;
+  margin: 0 0 40px 0;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.score-board {
+  background-color: turquoise;
+  color: white;
+  width: 400px;
+}
 
 .grid-wrapper {
   display: flex;
@@ -80,7 +113,7 @@ button {
 }
 
 .grid div {
-  border: 0.5px white;;
+  border: 2px gold;
   flex-grow: 1;
   height: 45px;
   width: 45px;
