--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
 
 body {
   height: 100%;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   margin: 0;
@@ -13,6 +13,7 @@ body {
   background-size: cover;
   text-align: center;
   color: black;
+  font-size: 18px;
 } 
 
 h1 { 
@@ -45,10 +46,17 @@ main {
   background-repeat: no-repeat;
   background-size: 500px;
   background-color: none;
+  margin-top: 40px;
 }
 
-.water-portal, .starfish-image, .shell-image {
-  height: 20px;
+.starfish-image, .shell-image {
+  height: 30px;
+  margin: 10px;
+}
+
+.water-portal {
+  height: 30px;
+  margin: 0 5px 10px 0 ;
 }
 
 
@@ -67,8 +75,15 @@ button {
   display: flex;
   flex: 3;
   align-items: center;
-  /* justify-content: center; */
   flex-direction: column;
+  margin-bottom: 40px;
+}
+
+.key {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
 }
 
 .wood-plank {
@@ -76,14 +91,18 @@ button {
   justify-content: space-evenly;
   align-items: center;
   width: 500px;
-  height: 200px;
-  position: absolute;
+  height: 150px;
   background-image: url('../assets/wood-plank.png');
   background-size: 500px;
-  margin: 0 0 40px 0;
+  margin: 0;
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.buttons {
+  display: flex;
+}
+
 
 .score-board {
   background-color: turquoise;
@@ -93,9 +112,10 @@ button {
 
 .grid-wrapper {
   display: flex;
-  height: 100vh;
+  /* height: 100vh; */
   justify-content: center;
   align-items: center; 
+  margin-bottom: 40px;
 }
 
 
