--- a/styles/main.css
+++ b/styles/main.css
@@ -80,7 +80,7 @@ main {
 
 .right-side {
   display: flex;
-  flex: 3;
+  flex: 2;
   align-items: center;
   flex-direction: column;
   margin-bottom: 40px;
@@ -98,7 +98,7 @@ main {
   margin: 10px;
 }
 
-.buttons {
+.controls {
   display: flex;
 }
 
@@ -106,6 +106,16 @@ main {
 button {
   padding: 10px;
   margin: 10px;
+}
+
+.try-button {
+  background-color: pink;
+  display: none;
+}
+
+.show-button {
+  background-color: pink;
+  display: inline;
 }
 
 .wood-plank {
@@ -120,6 +130,21 @@ button {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.other-side {
+  display: flex;
+  flex: 2;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  background-image: url('../assets/scroll.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 500px;
+  background-color: none;
+  margin-top: 40px;
+}
+
 
 /* Grid */
 
