--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,7 @@ body {
 .main-wrapper {
   display: flex;
   align-items: center;
+  /* justify-content: center; */
   flex-direction: column;
 }
 
