--- a/styles/main.css
+++ b/styles/main.css
@@ -46,24 +46,22 @@ main {
   background-image: url('../assets/scroll.png');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 390px;
+  background-size: 420px;
   background-color: none;
-  margin-top: 40px;
+  margin-top: 160px;
   font-size: 14px;
   padding: 80px;
 }
 
-.scroll-text {
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+.scroll-text-one {
+  height: 350px;
+  width: 270px;
   flex-direction: column;
 }
 
 .key {
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
@@ -73,7 +71,7 @@ main {
 }
 
 .starfish-image {
-  height: 50px;
+  height: 40px;
   margin: 10px;
 }
 
@@ -155,7 +153,7 @@ button {
   background-size: 500px;
   background-repeat: no-repeat;
   background-position: center;
-  margin: 0;
+  margin: 0 auto;
 }
 
 
@@ -170,12 +168,20 @@ button {
   background-image: url('../assets/scroll.png');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 390px;
+  background-size: 420px;
   background-color: none;
-  margin-top: 40px;
+  margin-top: 160px;
   font-size: 14px;
   padding: 80px;
 }
+
+.scroll-text-two {
+  height: 350px;
+  width: 270px;
+  flex-direction: column;
+  font-size: 25px;
+}
+
 
 
 /* Grid */
